@@ -1,5 +1,10 @@
 2009-03-02  Alan Modra  <amodra@bigpond.net.au>
 
+	2009-01-22  Alan Modra  <amodra@bigpond.net.au>
+	PR 6832
+	* dwarf2.c (find_line): Don't update stash->sec_info_ptr until
+	after comp_unit_find_line call.
+
 	2009-01-14  Alan Modra  <amodra@bigpond.net.au>
 	PR 9735
 	* syms.c (_bfd_stab_section_find_nearest_line): Don't free
